--- a/package.json
+++ b/package.json
@@ -3,16 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/parser": "^7.18.11",
+    "@babel/traverse": "^7.18.11",
+    "@monaco-editor/react": "^4.4.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/babel__traverse": "^7.18.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.49",
+    "@types/prettier": "^2.7.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-resizable": "3.0.2",
+    "@uiw/react-md-editor": "^3.17.2",
+    "axios": "^0.27.2",
+    "bulmaswatch": "^0.8.1",
+    "esbuild-wasm": "^0.15.5",
+    "immer": "^9.0.15",
+    "localforage": "^1.10.0",
+    "monaco-jsx-highlighter": "^2.0.4",
+    "npm": "^8.18.0",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "react-resizable": "3.0.4",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
